--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@
 // THE SOFTWARE.
 
 apply plugin: 'java'
-apply plugin: 'maven'
+// apply plugin: 'maven'
 apply plugin: 'application'
 
 import org.apache.tools.ant.filters.ReplaceTokens
